--- a/macros.tex
+++ b/macros.tex
@@ -54,7 +54,8 @@
 \DeclareMathOperator{\conv}{conv}
 \DeclareMathOperator{\aff}{aff}
 
-\DeclareMathOperator{\LexMin}{lex-min}
+\DeclareMathOperator{\vol}{Volume}
+\DeclareMathOperator*{\LexMin}{lex-min}
 
 
 
